# sqp_solver

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/solvers/: bfgs.hpp  qp.hpp  qp_solver.hpp  sqp.hpp  utils.hpp
src/: qp.cpp  sqp.cpp
tests/: CMakeLists.txt  bfgs_test.cpp  qp_solver_sparse_test.cpp  qp_solver_test.cpp  sqp_simple_test.cpp  sqp_test.cpp  sqp_test_autodiff.cpp
tests/unsupported/: qp_solver_test.cpp
